Add metrics for custom views